--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:sandbox.hortonworks.com:2181:/hbase-unsecure
+spring.datasource.url=jdbc:phoenix:sandbox.hortonworks.com:2181:/hbase-unsecure
 spring.datasource.driver-class-name=org.apache.phoenix.jdbc.PhoenixDriver
 phoenixJdbcClient.testQuery=SELECT * FROM WEB_STAT
